--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  font-family: century gothic;
+}
+
+
+h1 {
+  color: #369;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 250%;
+}
+
+h2 {
+  color: #369;
+}
+
+
+@media (max-width: 640px) {
+
+* {
+
+}
+
+
+}
