--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,22 +2,19 @@
 
     <nav class="navbar navbar-inverse">
       <div class="container">
+        
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
           <a class="navbar-brand" routerLink="/accueil">EasyAngular</a>
         </div>
+        
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a routerLink="/accueil">Home</a></li>
             <li><a [routerLink]="['/cours']">Liste des cours</a></li>
             <li><a routerLink="/contact">Contact</a></li>
+            <li><a routerLink="/stagiaires">Liste des stagiaires</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </nav>
 
@@ -26,17 +23,18 @@
 <div class="container-fluid">
 <router-outlet ></router-outlet>
 </div>
-<!--
-<hr>
 
 
-<ul>
+<!--TEST ngIf avec else-->
+<!--<ul>
     <li *ngFor= "let mot of listeMot" >
         <div *ngIf= "mot=='mot1'; else elseBlock"> {{mot }}</div>
-      <ng-template #elseBlock>Alternate text while primary text is hidden</ng-template></li>
-</ul>
+      <ng-template #elseBlock>
+          texte alternatif si la condition if n'est pas remplie 
+      </ng-template></li>
+</ul>-->
 
-
+<!--
 <ul *ngFor= "let cours of courses" >
     <li> <b>Cours</b></li>
     <li style="list-style: none;"> {{cours.nom }}</li>
@@ -52,5 +50,4 @@
 
  <div *ngIf="estAffiche">
 <cours-liste></cours-liste>
-</div>
--->
+</div>-->
