--- a/src/app/components/cours/cours-detail.component.html
+++ b/src/app/components/cours/cours-detail.component.html
@@ -9,43 +9,43 @@
     (submit)="confirmerModification(form)">
 
 <div class="input-group">
-  <span class="input-group-addon" id="basic-addon1">!</span>
+  <span class="input-group-addon" id="basic-addon1">nom</span>
   <input type="text"  #name="ngModel" [(ngModel)]="cours.name" ngModel name="name" class="form-control" 
         placeholder="name" aria-describedby="basic-addon1" >
 </div>
 <br>
 <div class="input-group">
-  <span class="input-group-addon" id="basic-addon1">!</span>
+  <span class="input-group-addon" id="basic-addon1"><i class="fa fa-home" aria-hidden="true"></i></span>
   <input type="text" #libelle="ngModel" [(ngModel)]="cours.libelleEtablissement" ngModel name="libelleEtablissement" class="form-control" 
         placeholder="libelleEtablissement" aria-describedby="basic-addon1">
 </div>
 <br>
 <div class="input-group">
-  <span class="input-group-addon" id="basic-addon1">!</span>
+  <span class="input-group-addon" id="basic-addon1"><i class="fa fa-code" aria-hidden="true"></i></span>
   <input type="text" #language="ngModel" [(ngModel)]="cours.language" ngModel name="language" class="form-control" 
         placeholder="language" aria-describedby="basic-addon1">
 </div>
 <br>
 <div class="input-group">
-  <span class="input-group-addon" id="basic-addon1">!</span>
+  <span class="input-group-addon" id="basic-addon1"><i class="fa fa-calendar-check-o" aria-hidden="true"></i></span>
   <input type="text" #days="ngModel"  [(ngModel)]="cours.days" ngModel name="days" class="form-control" 
         placeholder="days" aria-describedby="basic-addon1">
 </div>
 <br>
 <div class="input-group">
-  <span class="input-group-addon" id="basic-addon1">!</span>
+  <span class="input-group-addon" id="basic-addon1"><i class="fa fa-level-up" aria-hidden="true"></i></span>
   <input type="text" #leval="ngModel"  [(ngModel)]="cours.leval" ngModel name="leval" class="form-control" 
         placeholder="leval" aria-describedby="basic-addon1">
 </div>
 <br>
 <div class="input-group">
-  <span class="input-group-addon" id="basic-addon1">!</span>
+  <span class="input-group-addon" id="basic-addon1"><i class="fa fa-etsy" aria-hidden="true"></i></span>
   <input type="text" #description="ngModel"  [(ngModel)]="cours.description" ngModel name="description" class="form-control" 
         placeholder="description" aria-describedby="basic-addon1">
 </div>
 <br>
 <div class="input-group">
-  <span class="input-group-addon" id="basic-addon1">!</span>
+  <span class="input-group-addon" id="basic-addon1"><i class="fa fa-star-o" aria-hidden="true"></i></span>
   <input type="text" #evaluation="ngModel"  [(ngModel)]="cours.evaluation" ngModel name="evaluation" class="form-control" 
         placeholder="evaluation" aria-describedby="basic-addon1">
 </div>
