--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,12 +3,19 @@
 
  <div class="container" style="width:300px;">
 
+      <!--Formulaire bootstrap avec tooltip "veuillez renseigner ce champ" si
+          non validé -->
       <form class="form-signin">
-        <h2 class="form-signin-heading">Please sign in</h2>
+        <h2 class="form-signin-heading">Authentification</h2>
+        
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <input type="email" id="inputEmail" class="form-control" 
+               style="margin-bottom:4%;" placeholder="Email address" required autofocus>
+        
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <input type="password" id="inputPassword" class="form-control"
+               placeholder="Password" required>
+        
         <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
@@ -18,9 +25,4 @@
       </form>
 
     </div> <!-- /container -->
-
-
-
-<!-- Contextual button for informational alert messages -->
-<button type="button" class="btn btn-info">Info</button>
 
