test opendata paris

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,12 +13,13 @@
             <li><a [routerLink]="['/cours']">Liste des cours</a></li>
             <li><a routerLink="/contact">Contact</a></li>
             <li><a routerLink="/stagiaires">Liste des stagiaires</a></li>
+            <li><a routerLink="/todos">Todos : test ws</a></li>
+            <li><a routerLink="/opendata">test opendata Paris</a></li>
+            
           </ul>
         </div>
       </div>
     </nav>
-
-
 
 <div class="container-fluid">
 <router-outlet ></router-outlet>
