test animations (slide in-out), routes parent/enfant

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,7 @@
             <li><a routerLink="/stagiaires">Liste des stagiaires</a></li>
             <li><a routerLink="/todos">Todos : test ws</a></li>
             <li><a routerLink="/opendata">test opendata Paris</a></li>
+            <li><a routerLink="/animation">test animations</a></li>
             
           </ul>
         </div>
