--- a/src/app/components/page-not-found-component.html
+++ b/src/app/components/page-not-found-component.html
@@ -1,5 +1,5 @@
 <h2> tu t'es perdu petit ? </h2>
 
 <div align="center">
-<img src="./src/assets/404.gif">
+<img src="https://cms-assets.tutsplus.com/uploads/users/30/posts/25489/image/pac-404.png">
 </div>
