--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,14 +9,14 @@
         
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a routerLink="/accueil">Home</a></li>
-            <li><a [routerLink]="['/cours']">Liste des cours</a></li>
-            <li><a routerLink="/contact">Contact</a></li>
-            <li><a routerLink="/stagiaires">Liste des stagiaires</a></li>
-            <li><a routerLink="/todos">Todos : test ws</a></li>
-            <li><a routerLink="/opendata">test opendata Paris</a></li>
-            <li><a routerLink="/animation">test animations</a></li>
-            
+            <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/accueil">Home</a></li>
+            <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a [routerLink]="['/cours']">Liste des cours</a></li>
+            <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/contact">Contact</a></li>
+            <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/stagiaires">Liste des stagiaires</a></li>
+            <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/todos">Todos : test ws</a></li>
+            <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/opendata">test opendata Paris</a></li>
+            <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/animation">test animations</a></li>
+            <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/livres">Livres</a></li>
           </ul>
         </div>
       </div>
