--- a/src/app/components/animations/anim-enfant-un.component.html
+++ b/src/app/components/animations/anim-enfant-un.component.html
@@ -1,4 +1,43 @@
-<div class="container-fluid">
-    <h3>Enfant 1</h3>
+<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
 
+<div class="container">
+	<h3>Enfant 1</h3>
+    <div class="row">
+    <div class="col-md-12" style="border-style:groove;">
+		<h2>SOCIAL ICONS WITH NICE EFFECTS and<br /> unusual position</h2>
+                            <div class="col-md-6 .col-md-offset-3">
+                                 <ul class="social">
+                                  <li class="facebook"><a href="http://facebook.com/alterowo"><i class="fa fa-facebook fa-3x"></i></a></li>
+                                  <li class="twitter"><a href="http://twitter.com/Kyokushinowa"><i class="fa fa-twitter fa-3x"></i></a></li>
+                                  <li class="pinterest"><a href="http://www.pinterest.com/beatagibalska/"><i class="fa fa-pinterest-p fa-3x"></i></a></li>
+                                  <li class="behance"><a href="https://www.behance.net/Kurnikowa"><i class="fa fa-behance fa-3x"></i></a></li>
+                                </ul>
+                          </div>
+    </div>
+    </div>
+    <div class="row">
+    <div class="col-md-12">
+    	<h2>You can edit this CSS if you want<br /> and if you need.</h2>
+                            <div class="col-md-6 .col-md-offset-3">
+                                 <ul class="social">
+                                  <li class="facebook"><a href="http://facebook.com/alterowo"><i class="fa fa-facebook fa-3x"></i></a></li>
+                                  <li class="twitter"><a href="http://twitter.com/Kyokushinowa"><i class="fa fa-twitter fa-3x"></i></a></li>
+                                  <li class="behance2"><a href="https://www.behance.net/Kurnikowa"><i class="fa fa-behance fa-3x"></i></a></li>
+                                </ul>
+                          </div>
+    </div>
+    </div>
+     <div class="row">
+    <div class="col-md-12">
+        <h2>Every Simple to USE <br /> with FONT AWESOME</h2>
+                            <div class="col-md-6 .col-md-offset-3">
+                                 <ul class="social">
+                                  <li class="facebook2"><a href="http://facebook.com/alterowo"><i class="fa fa-facebook fa-3x"></i></a></li>
+                                  <li class="twitter2"><a href="http://twitter.com/Kyokushinowa"><i class="fa fa-twitter fa-3x"></i></a></li>
+                                  <li class="behance3"><a href="https://www.behance.net/Kurnikowa"><i class="fa fa-behance fa-3x"></i></a></li>
+                                </ul>
+                          </div>
+    </div>
+
+    </div>
 </div>
